FIX Vanta.js on mobile UI

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 500px) {
     #vanta {
-        width: 500%;
+        width: 200%;
     }
 }
 
